--- a/Flink车联网/项目代码/CarNetWork/OfflineAnalysis/pom.xml
+++ b/Flink车联网/项目代码/CarNetWork/OfflineAnalysis/pom.xml
@@ -26,8 +26,8 @@
     <!-- flink jdbc-->
     <dependency>
         <groupId>org.apache.flink</groupId>
-        <artifactId>flink-connector-jdbc_2.12</artifactId>
-        <version>${flink.version}</version>
+        <artifactId>flink-jdbc_2.12</artifactId>
+        <version>1.10.0</version>
         <exclusions>
             <exclusion>
                 <groupId>org.slf4j</groupId>
